--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
     <li>Prof. Cindy Cox, University of California, Berkeley  <a href="mailto:cacox@berkeley.edu">cacox@berkeley.edu</a></li>
     <li>Ass. Prof. Michelle Lou, Santa Cruz University of California  <a href="mailto:lou.michelle@gmail.com">lou.michelle@gmail.com</a></li>
   </ul>
-
+<footer>
+    © Alfred Jimenez 2023
+</footer>
 </body>
 </html>
