--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <li>Dear Ape, - For two voices. <br> 
             Premiered by Auditivvokal Dresden in Barcelona on May 8 during the Barcelona modern festival 2019. "Call for Score" in the Twin Cities New Music Festival in Minneapolis, USA 2020.</li>
         <li>Norrköping Symphony Orchestra premieres "Shouts" for large orchestra. <br> 
-            Premiered in De Geerhall in Norrköping, Sweden May 26, 2016.</li>
+            Premiered in De Geerhall in Norrköping, Sweden May 26, 2016</li>
   </ul>
 
   <h3>Refereres</h3>
